--- a/overlord.toml
+++ b/overlord.toml
@@ -5,9 +5,10 @@
   prefix = ["sudo", "apt-get", "install", "-y"]
   
 [tasks.common]
-  deps = ["neovim"]
+  deps = ["neovim", "zsh"]
   links = [
     [".config/nvim"],
+    [".zshrc"],
     [".gitconfig"],
     [".gitignore"]
   ]
@@ -15,3 +16,11 @@
 [tasks.neovim]
   rejects = [["which", "nvim"]]
   cmds = [["@install", "neovim"]]
+
+[tasks.zsh]
+  rejects = [["which", "zsh"]]
+  cmds = [
+    ["@install", "zsh"], 
+    ["chsh", "-s", "/usr/bin/zsh"],
+    ["git", "clone", "git://github.com/robbyrussell/oh-my-zsh.git", "~/.oh-my-zsh"]
+  ]
