--- a/overlord.toml
+++ b/overlord.toml
@@ -28,12 +28,12 @@
 
 [tasks.asdf]
   rejects = [["which", "asdf"]]
-  ["@clone", "git://github.com/asdf-vm/asdf.git", "~/.asdf"]
+  cmds = [["@clone", "git://github.com/asdf-vm/asdf.git", "./.asdf"]]
 
 [tasks.zsh]
   rejects = [["which", "zsh"]]
   cmds = [
     ["@install", "zsh"], 
     ["chsh", "-s", "/usr/bin/zsh"],
-    ["@clone", "git://github.com/robbyrussell/oh-my-zsh.git", "~/.oh-my-zsh"]
+    ["@clone", "git://github.com/robbyrussell/oh-my-zsh.git", "./.oh-my-zsh"]
   ]
