--- a/overlord.toml
+++ b/overlord.toml
@@ -39,6 +39,7 @@
   ]
 
 [tasks.bootstrap__arch]
+  deps = ["yaourt"]
   cmds = [
     ["@install", "python3", "python-pip", "ruby", "ctags", "xorg-xrdb"],
     ["sudo", "pip", "install", "--upgrade", "pip"],
@@ -46,4 +47,18 @@
     ["gem", "install", "neovim"],
     ["@clone", "https://github.com/Lokaltog/powerline-fonts", ".fonts"],
     ["fc-cache", "-vf", ".fonts"]
+  ]
+
+[tasks.yaourt]
+  cmds = [
+    ["@install", "wget"],
+    ["wget", "-P", "bt-tmp/", "https://aur.archlinux.org/cgit/aur.git/snapshot/package-query.tar.gz"],
+    ["tar", "xfz", "bt-tmp/package-query.tar.gz", "-C", "tmp/"],
+    ["sh", "-c", "cd bt-tmp/package-query && makepkg"],
+    ["sudo", "sh", "-c", "pacman -U bt-tmp/package-query/package-query*.pkg.tar.xz"],
+    ["wget", "-P", "bt-tmp/", "https://aur.archlinux.org/cgit/aur.git/snapshot/yaourt.tar.gz"],
+    ["tar", "xfz", "bt-tmp/yaourt.tar.gz", "-C", "tmp/"],
+    ["sh", "-c", "cd bt-tmp/yaourt && makepkg"],
+    ["sudo", "sh", "-c", "pacman -U bt-tmp/yaourt/yaourt*.pkg.tar.xz"],
+    ["rm", "-rf", "bt-tmp/"]
   ]
