--- a/overlord.toml
+++ b/overlord.toml
@@ -41,8 +41,8 @@
 [tasks.bootstrap__arch]
   deps = ["yaourt"]
   cmds = [
-    ["@install", "python3", "python-pip", "ruby", "ctags", "xorg-xrdb"],
-    ["yaourt", "i3-gaps"],
+    ["@install", "rofi", "python3", "python-pip", "ruby", "ctags", "xorg-xrdb"],
+    ["yaourt", "i3-gaps nerd-fonts-complete"],
     ["sudo", "pip", "install", "--upgrade", "pip"],
     ["sudo", "pip", "install", "neovim"],
     ["gem", "install", "neovim"],
