--- a/overlord.toml
+++ b/overlord.toml
@@ -42,7 +42,7 @@
   deps = ["yaourt"]
   cmds = [
     ["@install", "rofi", "python3", "python-pip", "xdg-utils", "ruby", "ctags", "xorg-xrdb"],
-    ["yaourt", "i3-gaps nerd-fonts-complete"],
+    ["yaourt", "i3-gaps nerd-fonts-complete urxvt-resize-font-git"],
     ["sudo", "pip", "install", "--upgrade", "pip"],
     ["sudo", "pip", "install", "neovim"],
     ["gem", "install", "neovim"],
