--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -4,20 +4,8 @@
 
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+# Font for window titles. Will also be used by the bar
 font pango:monospace 10
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -119,6 +107,7 @@ exec --no-startup-id /usr/bin/vmware-user-suid-wrapper #for virutal machines
 
 # Border config
 for_window [class="Gnome-terminal"] border pixel 0
+for_window [class="URxvt"] border pixel 0
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
