--- a/overlord.toml
+++ b/overlord.toml
@@ -42,6 +42,7 @@
   deps = ["yaourt"]
   cmds = [
     ["@install", "rofi", "python3", "python-pip", "xdg-utils", "xorg-xprop", "ruby", "ctags", "xorg-xrdb"],
+    ["@install", "unzip"],
     ["yaourt", "i3-gaps nerd-fonts-complete urxvt-resize-font-git"],
     ["sudo", "pip", "install", "--upgrade", "pip"],
     ["sudo", "pip", "install", "neovim"],
