--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -102,7 +102,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # Application Startup
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/nebula.jpeg
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/yosemite.jpg
 exec --no-startup-id /usr/bin/vmware-user-suid-wrapper #for virutal machines
 
 # Border config
@@ -147,7 +147,7 @@ bar {
 
 ################################################################
 #                         border  backgr  text     indicator child_border 
-client.focused		 	      #1d3037 #1d3037 #ffffff  #ffffff   #1d3037
+client.focused		 	      #1d3037 #000000 #ffffff  #ffffff   #1d3037
 client.focused_inactive 	#1d2121 #1d2121 #a1a1a1  #484e50   #1d2121
 client.unfocused 		      #272727 #272727 #fdfdfd  #bfbfbf   #272727	
 client.urgent   		      #4a4b4c #4a4b4c #fdfdfd  #fbfbfb   #4a4c4b
