--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -17,7 +17,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start app runner
-bindsym $mod+d exec rofi -show run
+#bindsym $mod+d exec rofi -show run
+bindsym $mod+d exec rofi -show run -lines 6 -eh 2 -width 100 -padding 625 -opacity "85" -bw 0
 
 # change focus
 bindsym $mod+h focus left
@@ -104,6 +105,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/yosemite.jpg
 exec --no-startup-id /usr/bin/vmware-user-suid-wrapper #for virutal machines
+exec --no-startup-id compton -f 
 
 # Border config
 for_window [class="Gnome-terminal"] border pixel 0
