--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -139,7 +139,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command i3status
+  status_command i3status -c $HOME/.config/i3/i3-status.conf
 	colors {
 		background #353941
 		statusline #9e958e
