--- a/.config/i3-desktop/i3-status.conf
+++ b/.config/i3-desktop/i3-status.conf
@@ -3,8 +3,8 @@ general {
   interval = 5
 }  
 
-order += "tztime local"
+order += "time"
 
-tztime local {
+time{
   format = "%I:%m%P, %a %b %e, %Y"
 }
