--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -5,7 +5,7 @@
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar
-font pango:monospace 10
+font pango:SFNS\Display\Regular 13
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
