--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -63,6 +63,9 @@ bindsym $mod+Shift+space floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
+# focus previous workspace
+workspace_auto_back_and_forth yes
+
 # focus the parent container
 bindsym $mod+a focus parent
 
@@ -109,11 +112,13 @@ exec --no-startup-id compton -f
 exec --no-startup-id kalu
 exec --no-startup-id dropbox
 
-# Border config
+# Window Config
 for_window [class="Gnome-terminal"] border pixel 0
 for_window [class="URxvt"] border pixel 0
 for_window [class="Termite"] border pixel 0
 for_window [class="Thunar"] border pixel 0
+for_window [class="Catfish"] floating enable
+
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
