--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -109,7 +109,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # Application Startup
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/yosemite.jpg
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/rocket.png
 exec --no-startup-id /usr/bin/vmware-user-suid-wrapper #for virutal machines
 exec --no-startup-id /usr/bin/lxqt-policykit-agent #auth requests
 exec --no-startup-id compton -f -b
@@ -148,7 +148,9 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command i3status -c $HOME/.config/i3/i3-status.conf
+  i3bar_command i3bar -t
+  status_command i3blocks -c $HOME/.config/i3/i3blocks.conf
+
 	colors {
 		background #1b1d1f
 		statusline #9e958e
