--- a/.config/i3-desktop/i3blocks.conf
+++ b/.config/i3-desktop/i3blocks.conf
@@ -35,7 +35,7 @@ border=#98971a
 
 [time]
 label=    
-command=echo "`date +'%a %d %b'` <b>`date +'%T'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
+command=echo "`date +'%a %d %b'` <b>`date +'%I:%M'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
 interval=1
 markup=pango
 border=#928374
