--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -184,3 +184,8 @@ gaps outer $default_gaps_outer
 
 smart_borders on
 smart_gaps on
+
+# Bindings
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
