--- a/.config/i3-desktop/i3blocks.conf
+++ b/.config/i3-desktop/i3blocks.conf
@@ -33,6 +33,12 @@ interval=5
 signal=1
 border=#98971a
 
+[battery]
+command=python3 $HOME/battery.py
+markup=pango
+interval=5
+border=#aaaaff
+
 [time]
 label=    
 command=echo "`date +'%a %d %b'` <b>`date +'%I:%M'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
