--- a/overlord.toml
+++ b/overlord.toml
@@ -49,7 +49,7 @@
   cmds = [
     ["@install", "rofi", "python3", "python-pip", "xdg-utils", "xorg-xprop", "ruby", "ctags", "xorg-xrdb"],
     ["@install", "unzip", "arc-gtk-theme", "lxappearance", "compton", "lxqt-policykit", "termite", "thunar"],
-    ["@install", "inotify-tools", "catfish", "mlocate", "sysstat"],
+    ["@install", "inotify-tools", "catfish", "mlocate", "sysstat", "xclip"],
     ["yaourt", "i3-gaps", "nerd-fonts-complete", "urxvt-resize-font-git", "kalu", "otf-fontawesome"],
     ["yaourt", "i3blocks-gaps-git"],
     ["sudo", "pip", "install", "--upgrade", "pip"],
