--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -7,6 +7,7 @@ set $mod Mod4
 # Workspaces
 set $wrk1 "1    "
 set $wrk2 "2    "
+set $wrk3 "3   "
 
 # Font for window titles. Will also be used by the bar
 font pango:SFNS Display Regular 14
@@ -80,7 +81,7 @@ bindsym $mod+a focus parent
 # switch to workspace
 bindsym $mod+1 workspace $wrk1
 bindsym $mod+2 workspace $wrk2
-bindsym $mod+3 workspace 3
+bindsym $mod+3 workspace $wrk3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -92,7 +93,7 @@ bindsym $mod+0 workspace 10
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $wrk1
 bindsym $mod+Shift+2 move container to workspace $wrk2
-bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+3 move container to workspace $wrk3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
