--- a/overlord.toml
+++ b/overlord.toml
@@ -44,15 +44,14 @@
   deps = ["yaourt"]
   cmds = [
     ["@install", "rofi", "python3", "xdg-utils", "xorg-xprop", "ruby", "ctags", "xorg-xrdb"],
-    ["@install", "unzip", "arc-gtk-theme", "lxappearance", "compton", "lxqt-policykit", "termite", "thunar"],
+    ["@install", "unzip", "arc-gtk-theme", "lxappearance", "compton", "lxqt-policykit", "thunar"],
     ["@install", "inotify-tools", "catfish", "mlocate", "sysstat", "xclip", "numlockx"],
-    ["yaourt", "i3-gaps", "nerd-fonts-complete", "urxvt-resize-font-git", "kalu", "otf-fontawesome"],
+    ["yaourt", "i3-gaps", "kalu", "otf-fontawesome", "fira-code-git", "konsole"],
     ["yaourt", "i3blocks-gaps-git", "python2-pip"],
     ["sudo", "pip3", "install", "--upgrade", "pip"],
     ["sudo", "pip2", "install", "neovim"],
     ["sudo", "pip3", "install", "neovim"],
     ["gem", "install", "neovim"],
-    ["@clone", "https://github.com/Lokaltog/powerline-fonts", ".fonts"],
     ["fc-cache", "-vf", ".fonts"]
   ]
 
