--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -17,7 +17,7 @@ font pango:Source Code Pro for Powerline 12
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec konsole
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -111,13 +111,13 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # Application Startup
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/rocket.png
 exec --no-startup-id /usr/bin/vmware-user-suid-wrapper #for virutal machines
 exec --no-startup-id /usr/bin/lxqt-policykit-agent #auth requests
 exec --no-startup-id numlockx on
 exec --no-startup-id compton -f -b
 exec --no-startup-id kalu
 exec --no-startup-id dropbox
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/rocket.png
 
 # Window Config
 for_window [class="Gnome-terminal"] border pixel 0
@@ -126,6 +126,8 @@ for_window [class="Termite"] border pixel 0
 for_window [class="Thunar"] border pixel 0
 for_window [class="Firefox"] border pixel 0
 for_window [class="Chromium"] border pixel 0
+for_window [class="konsole"] border pixel 0
+for_window [class="kitty"] border pixel 0
 for_window [class="Catfish"] floating enable
 
 
