--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,28 +7,26 @@ background #24282c
 
 background_opacity 0.9
 
-#color0 #262626
-#color1 #31363b
-#color2 #ed1515
-#color3 #11d116
-#color5 #1abc9c
-#color6 #9b59b6
-#color7 #3daee9
-#color8 #eff0f1
+color0 #333333
+color8 #3d3d3d
 
-color0 #262626
-color8 #5F5A60
-color1 #CF6A4C
-color9 #CF6A4C
-color2 #8F9D6A
-color10 #8F9D6A
-color3 #F9EE98
-color11 #F9EE98
-color4 #7587A6
-color12 #7587A6
-color5 #9B859D
-color13 #9B859D
-color6 #AFC4DB
-color14 #AFC4DB
-color7 #A7A7A7
-color15 #FFFFFF
+color1 #8c4665
+color9 #bf4d80
+
+color2 #287373
+color10 #53a6a6
+
+color3 #7c7c99
+color11  #9e9ecb
+
+color4   #395573
+color12  #477ab3
+
+color5   #5e468c
+color13  #7e62b3
+
+color6   #31658c
+color14  #6096bf
+
+color7   #899ca1
+color15  #c0c0c0
