--- a/overlord.toml
+++ b/overlord.toml
@@ -45,7 +45,7 @@
   cmds = [
     ["@install", "rofi", "python3", "xdg-utils", "xorg-xprop", "ruby", "ctags", "xorg-xrdb"],
     ["@install", "unzip", "arc-gtk-theme", "lxappearance", "compton", "lxqt-policykit", "kitty", "thunar"],
-    ["@install", "inotify-tools", "catfish", "mlocate", "sysstat", "xclip", "numlockx"],
+    ["@install", "inotify-tools", "catfish", "mlocate", "sysstat", "xclip", "numlockx", "ack"],
     ["yaourt", "i3-gaps", "otf-fontawesome", "fira-code-git"],
     ["yaourt", "i3blocks-gaps-git", "python2-pip"],
     ["sudo", "pip3", "install", "--upgrade", "pip"],
