--- a/overlord.toml
+++ b/overlord.toml
@@ -41,13 +41,13 @@
   ]
 
 [tasks.bootstrap__arch]
-  deps = ["yaourt"]
+  deps = ["yay"]
   cmds = [
     ["@install", "rofi", "python3", "xdg-utils", "xorg-xprop", "ruby", "xorg-xrdb"],
     ["@install", "unzip", "arc-gtk-theme", "lxappearance", "compton", "lxqt-policykit", "kitty", "thunar"],
     ["@install", "inotify-tools", "catfish", "mlocate", "sysstat", "xclip", "numlockx", "ack"],
-    ["yaourt", "i3-gaps", "otf-nerd-fonts-fira-code"],
-    ["yaourt", "i3blocks-gaps-git", "python2-pip"],
+    ["yay", "i3-gaps", "otf-nerd-fonts-fira-code", "fyz"],
+    ["yay", "i3blocks-gaps-git", "python2-pip"],
     ["sudo", "pip3", "install", "--upgrade", "pip"],
     ["sudo", "pip2", "install", "neovim"],
     ["sudo", "pip3", "install", "neovim"],
