--- a/.config/i3-desktop/config
+++ b/.config/i3-desktop/config
@@ -124,7 +124,7 @@ exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/moon.jpg
 #exec --no-startup-id xwinwrap -ov -ni -fs -- mpv -vo x11 -wid WID --keepaspect=no --loop ~/Pictures/wallpapers/observe.gif
 exec --no-startup-id kitty --name ks -c=$HOME/.config/kitty/scratch.conf
 for_window [instance="ks"] floating enable, move scratchpad, scratchpad show;
-for_window [instance="ks"] resize grow left -150, resize grow right -150, resize grow down -300, resize grow up -300, move scratchpad;
+for_window [instance="ks"] resize grow right -200, resize grow left -200, resize grow down -300, resize grow up -300, move scratchpad;
 bindsym $mod+t [instance="ks"] scratchpad show
 
 # Window Config
