--- a/.config/i3-desktop/i3blocks.conf
+++ b/.config/i3-desktop/i3blocks.conf
@@ -34,7 +34,8 @@ signal=1
 border=#98971a
 
 [battery]
-command=python3 $HOME/battery.py
+#command=python3 $HOME/battery.py
+command= perl /usr/lib/i3blocks/battery
 markup=pango
 interval=5
 border=#aaaaff
