--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,33 +1,25 @@
 copy_on_select yes
-font_family furacode nerd font mono
+font_family Fira Code Medium
+term xterm
 
 font_size 16.0
 
-foreground #eff0f1
-background #000
-
-background_opacity 0.9
-
-color0 #333333
-color8 #3d3d3d
-
-color9 #8c4665
-color1 #bf4d80
-
-color2 #287373
-color10 #53a6a6
-
-color11 #7c7c99
-color3 #9e9ecb
-
-color12  #395573
-color4 #477ab3
-
-color5   #5e468c
-color13  #7e62b3
-
-color6   #31658c
-color14  #6096bf
-
-color7   #899ca1
-color15  #c0c0c0
+background_opacity 0.6
+background #ffffdd
+foreground #383a42
+color0 #383a42
+color1 #e45649
+color2 #50a14f
+color3 #c18401
+color4 #0184bc
+color5 #a626a4
+color6 #0997b3
+color7 #fafafa
+color8 #383a42
+color9 #e45649
+color10 #50a14f
+color11 #c18401
+color12 #0184bc
+color13 #a626a4
+color14 #0997b3
+color15 #fafafa
