--- a/.config/kitty/scratch.conf
+++ b/.config/kitty/scratch.conf
@@ -1,5 +1,5 @@
 copy_on_select yes
-font_family furacode nerd font mono
+font_family Fira Code Medium
 
 font_size 16.0
 
@@ -29,5 +29,3 @@ color15         #607a88
 
 foreground    #2d2d2d
 background    #ffffff
-
-background_opacity 0.7
